--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@ngrx/store": "^13.2.0",
     "@popperjs/core": "^2.11.5",
+    "angular-cli-ghpages": "^1.0.3",
     "autoprefixer": "^10.4.7",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
